--- a/views/package-tour/wedding.ejs
+++ b/views/package-tour/wedding.ejs
@@ -9,7 +9,7 @@
 <div class="jumbotron blue lighten-4">
   <h1 class="cyan-text text-darken-4"><span >
   <i class="material-icons medium teal-text" id="hell">tram </i></span>Destination Wedding</h1>
-  <p class="teal-text text-darken-4">Manali, which is named after the Sanatan Hindu lawgiver Manu literally means ‘the abode of Manu’. Legend has it that sage Manu stepped off his ark in Manali to recreate human life after a great flood had deluged the world and is in the North of Kullu Valley(‘Valley of the Gods’) is famous for its temples, beauty and its majestic hills  If you wish to spend your weekend adoring the beautiful getaways of the Kullu and Manali, join Weekend Thrill for different kinds of Trips.</p>
+  <p class="teal-text text-darken-4">“Do you want to marry me?”… “Yes!!!” So what comes next? Wedding planning…right! Most of the Indian couples want a grand wedding ceremony away from their hustle and bustle city life and so choosing a beautiful wedding destination has become a trend nowadays.The country offers excellent wedding destinations with choices variegating from ceremonies in the Himalayas to the beach weddings all around the coast of Goa.  So, whether you like snowy mountains, beautiful architecture, cooling backwaters, sandy beaches, historical cities, rich culture, fascinating traditions or rooted populace, India has all of these to make your wedding a cherished event. Below is the list of 5 famous venues for a destination wedding in India.</p>
   <hr class="my-4">
   <button class="btn ">Check out our tours...</button>
 
@@ -35,7 +35,8 @@
 <div class="container" id="test-swipe-1">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="/img/manali1.jpg" alt="">
+                <img  class="responsive-img" src="/img/wedding1.jpg" alt="">
+                  <img  class="responsive-img pt-5 mt-5" src="/img/wedding2.jpg" alt="">
   </div>
 							<div class="col l8">
 								<h2 class="center teal-text">Get Married In Udaipur</h2>
@@ -56,7 +57,8 @@
 <div class="container" id="test-swipe-2">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="/img/manali1.jpg" alt="">
+                <img  class="responsive-img" src="/img/wedding3.jpg" alt="">
+                <img  class="responsive-img pt-5 mt-3" src="/img/wedding4.jpg" alt="">
   </div>
 							<div class="col l8">
 								<h2 class="center teal-text">Get Married In Goa</h2>
@@ -79,7 +81,8 @@
 <div class="container" id="test-swipe-3">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="/img/manali1.jpg" alt="">
+                <img  class="responsive-img" src="/img/wedding5.jpg" alt="">
+                <img  class="responsive-img pt-5 mt-3" src="/img/wedding6.jpg" alt="">
   </div>
 							<div class="col l8">
 								<h2 class="center teal-text">Get Married In Kerala</h2>
@@ -102,7 +105,7 @@
 <div class="container" id="test-swipe-4">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="/img/manali1.jpg" alt="">
+                <img  class="responsive-img" src="/img/wedding7.jpg" alt="">
   </div>
 							<div class="col l8">
 								<h2 class="center teal-text">Get Married In Jodhpur</h2>
@@ -126,7 +129,8 @@
 <div class="container" id="test-swipe-5">
 							<div class="row">
                  <div class="col l4">
-                <img  class="responsive-img" src="/img/manali1.jpg" alt="">
+                <img  class="responsive-img" src="/img/wedding8.jpg" alt="">
+                <img  class="responsive-img pt-5 mt-3" src="/img/wedding9.jpg" alt="">
   </div>
 							<div class="col l8">
 								<h2 class="center teal-text">Get Married In Amritsar</h2>
