--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,18 +31,18 @@ Amazing </h2><h2 class="center lime-text text-accent-1">Holiday Packages & event
 <div id="second">
 <div class="container">
 <div class="row">
-  <div class="col col-lg-4 col-sm-4"><img src="/img/group2.jpg" alt=""><div class="centered">Group Tour</div></div>
-  <div class="col col-lg-5 col-sm-4"><img src="/img/honeymoon.jpg"  alt=""><div class="centered">Honeymoon Tour</div></div>
+    <div class="col col-lg-4 col-sm-4"><a href="/form"><img src="/img/group2.jpg" alt=""><div class="centered">Group Tour</div></a></div>
+  <div class="col col-lg-5 col-sm-4"><a href="/form"><img src="/img/honeymoon.jpg"  alt=""><div class="centered">Honeymoon Tour</div></a></div>
 
-  <div class="col col-lg-3 col-sm-4"><img src="/img/international.jpg"  alt=""><div class="centered">International Tour</div></div>
+  <div class="col col-lg-3 col-sm-4"><a href="/form"><img src="/img/international.jpg"  alt=""><div class="centered">International Tour</div></a></div>
 
 </div>
 
 <div class="row">
-  <div class="col col-lg-3 col-sm-3"><img src="/img/family1.jpg" alt=""><div class="centered">Family Tour</div></div>
-  <div class="col col-lg-3 col-sm-3"><img src="/img/domestic1.png" alt=""><div class="centered">Domestic Tour</div></div>
-  <div class="col col-lg-3 col-sm-3"><img src="/img/business.jpg" alt=""><div class="centered">Business Tour</div></div>
-  <div class="col col-lg-3 col-sm-3"><img src="/img/india.jpg" alt=""><div class="centered">Indian Tour</div></div>
+  <div class="col col-lg-3 col-sm-3"><a href="/form"><img src="/img/family1.jpg" alt=""><div class="centered">Family Tour</div></a></div>
+  <div class="col col-lg-3 col-sm-3"><a href="/form"><img src="/img/domestic1.png" alt=""><div class="centered">Domestic Tour</div></a></div>
+<div class="col col-lg-3 col-sm-3"><a href="/form_mice"><img src="/img/business.jpg" alt=""><div class="centered">Business Tour</div></a></div>
+  <div class="col col-lg-3 col-sm-3"><a href="/form"><img src="/img/india.jpg" alt=""><div class="centered">Indian Tour</div></a></div>
 
 
 </div>
