--- a/views/package-tour/agra.ejs
+++ b/views/package-tour/agra.ejs
@@ -21,7 +21,7 @@ Agra is a major tourist destination because of its many Mughal-era buildings, mo
 <div class="container">
 <div class="row">
     <div class="col l12">
-      <ul class="tabs" id="tabs-swipe-demo">
+      <ul class="tabs">
         <li class="tab col l4"><a  class="active" href="#test-swipe-1">Same Day Agra Tour By Car</a></li>
         <li class="tab col l4"><a  href="#test-swipe-2">Same Day Agra Tour By Train</a></li>
           <li class="tab col l4"><a  href="#test-swipe-3">Same Day Jaipur Tour </a></li>
@@ -234,6 +234,7 @@ Jahangir fell in love with his widowed daughter who processes unspeakable beauty
             </a>
 
           </div>
+
 <script>
 $(document).ready(function(){
  $('.fixed-action-btn').floatingActionButton();
@@ -245,7 +246,7 @@ $(document).ready(function(){
   });
 
   $(document).ready(function(){
-     $('.tabs').tabs();
+     $('.tab').tabs();
    });
 
 
