--- a/views/index.ejs
+++ b/views/index.ejs
@@ -209,7 +209,7 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
     </a>
     </div>
     <div class="col-lg-6 ">
-    <a href="/ladakh">  <img src="/img/ladakh.jpg" class="grid1"alt="">
+    <a href="/ladakh">  <img src="/img/ladakh_1.jpg" class="grid1"alt="">
       <div class="bottom-left"><button class="btn btn-teal">Ladakh Tour</button></div>
     </a>
     </div>
