--- a/views/package-tour/goa.ejs
+++ b/views/package-tour/goa.ejs
@@ -22,9 +22,9 @@ Goa is visited by large numbers of international and domestic tourists each year
 <div class="row">
     <div class="col l12">
       <ul class="tabs" id="tabs-swipe-demo">
-        <li class="tab col l4"><a  class="active" href="#test-swipe-1">GOA FAMILY SPECIAL</a></li>
-        <li class="tab col l4"><a  href="#test-swipe-2">GOA HONEYMOON TOUR</a></li>
-          <li class="tab col l4"><a  href="#test-swipe-3">GOA STUDENT OR YOUTH TOUR</a></li>
+        <li class="tab col l4"><a  class="active purple-text" href="#test-swipe-1">GOA FAMILY SPECIAL</a></li>
+        <li class="tab col l4"><a  class="active teal-text"  href="#test-swipe-2">GOA HONEYMOON TOUR</a></li>
+          <li class="tab col l4"><a  class="active purple-text"  href="#test-swipe-3">GOA STUDENT OR YOUTH TOUR</a></li>
       </ul>
     </div>
   </div>
