--- a/views/package-tour/kashmir.ejs
+++ b/views/package-tour/kashmir.ejs
@@ -23,9 +23,9 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 <div class="row">
     <div class="col l12">
       <ul class="tabs" id="tabs-swipe-demo">
-        <li class="tab col l4"><a  class="active" href="#test-swipe-1">Kashmir tour(3N/4D)</a></li>
-        <li class="tab col l4"><a  href="#test-swipe-2">Kashmir tour(4N/5D)</a></li>
-          <li class="tab col l4"><a  href="#test-swipe-3">Kashmir tour(6N/7D)</a></li>
+        <li class="tab col l4"><a  class="active purple-text" href="#test-swipe-1">Kashmir tour(3N/4D)</a></li>
+        <li class="tab col l4"><a  class="active pink-text" href="#test-swipe-2">Kashmir tour(4N/5D)</a></li>
+          <li class="tab col l4"><a class="active purple-text"  href="#test-swipe-3">Kashmir tour(6N/7D)</a></li>
       </ul>
     </div>
   </div>
