--- a/views/package-tour/wedding.ejs
+++ b/views/package-tour/wedding.ejs
@@ -22,11 +22,11 @@
     <div class="col l12">
       <h2>Get Married In:</h2>
       <ul class="tabs" id="tabs-swipe-demo">
-        <li class="tab col l2"><a  class="active" href="#test-swipe-1">Udaipur</a></li>
-        <li class="tab col l2"><a  href="#test-swipe-2"> Goa</a></li>
-          <li class="tab col l2"><a  href="#test-swipe-3"> Kerala</a></li>
-            <li class="tab col l3"><a  href="#test-swipe-4">Jodhpur</a></li>
-              <li class="tab col l3"><a  href="#test-swipe-5"> Amritsar</a></li>
+        <li class="tab col l2"><a  class="active purple-text" href="#test-swipe-1">Udaipur</a></li>
+        <li class="tab col l2"><a class=" teal-text" href="#test-swipe-2"> Goa</a></li>
+          <li class="tab col l2"><a class=" purple-text" href="#test-swipe-3"> Kerala</a></li>
+            <li class="tab col l3"><a class=" teal-text" href="#test-swipe-4">Jodhpur</a></li>
+              <li class="tab col l3"><a class=" purple-text" href="#test-swipe-5"> Amritsar</a></li>
       </ul>
     </div>
   </div>
