--- a/views/package-tour/agra.ejs
+++ b/views/package-tour/agra.ejs
@@ -21,18 +21,18 @@ Agra is a major tourist destination because of its many Mughal-era buildings, mo
 <div class="container">
 <div class="row">
     <div class="col l12">
-<<<<<<< HEAD
+
       <ul class="tabs" id="tabs-swipe-demo">
-        <li class="tab col l4"><a  class="active lime teal-text" href="#test-swipe-1">Same Day Agra Tour By Car</a></li>
-        <li class="tab col l4"><a class=" lime lighten-3 teal-text" href="#test-swipe-2">Same Day Agra Tour By Train</a></li>
-          <li class="tab col l4"><a  class="lime darken-2 teal-text"href="#test-swipe-3">Same Day Jaipur Tour </a></li>
-=======
-      <ul class="tabs">
+        <li class="tab col l4"><a  class="active  teal-text" href="#test-swipe-1">Same Day Agra Tour By Car</a></li>
+        <li class="tab col l4"><a class=" purple-text" href="#test-swipe-2">Same Day Agra Tour By Train</a></li>
+          <li class="tab col l4"><a  class=" teal-text"href="#test-swipe-3">Same Day Jaipur Tour </a></li>
+
+      <!-- <ul class="tabs">
         <li class="tab col l4"><a  class="active" href="#test-swipe-1">Same Day Agra Tour By Car</a></li>
         <li class="tab col l4"><a  href="#test-swipe-2">Same Day Agra Tour By Train</a></li>
           <li class="tab col l4"><a  href="#test-swipe-3">Same Day Jaipur Tour </a></li>
->>>>>>> 6fe2bb0aaf2554819b52b68f14c2b9c56929906e
-      </ul>
+
+      </ul> -->
     </div>
   </div>
 </div>
@@ -235,7 +235,7 @@ Jahangir fell in love with his widowed daughter who processes unspeakable beauty
 
 
 
-<<<<<<< HEAD
+
         <div class="fixed-action-btn">
   <a class="btn-floating btn-large red pulse large">
     <i class="large material-icons ">mode_edit</i>
@@ -247,43 +247,28 @@ Jahangir fell in love with his widowed daughter who processes unspeakable beauty
     <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
   </ul>
 </div>
-=======
+
                   <div class="fixed-action-btn">
             <a class="btn-floating btn-large red pulse" href="/form_query">
               <i class="large material-icons">mode_edit</i>
             </a>
 
           </div>
-<<<<<<< HEAD
->>>>>>> eaeb85a83a9d1b627bb7a1e724df08f8753c56fa
-=======
 
->>>>>>> 6fe2bb0aaf2554819b52b68f14c2b9c56929906e
-<script>
-$(document).ready(function(){
- $('.fixed-action-btn').floatingActionButton();
-});
+          <script>
+          $(document).ready(function(){
+           $('.fixed-action-btn').floatingActionButton();
+          });
 
 
-$(document).ready(function(){
-    $('.collapsible').collapsible();
-  });
+          $(document).ready(function(){
+              $('.collapsible').collapsible();
+            });
 
-  $(document).ready(function(){
-<<<<<<< HEAD
-     $('.tabs').tabs(
-       {
-         instance.select('tab_id');
-       }
-     );
-=======
-     $('.tab').tabs();
->>>>>>> 6fe2bb0aaf2554819b52b68f14c2b9c56929906e
-   });
-
-
-
-</script>
+            $(document).ready(function(){
+               $('.tabs').tabs();
+             });
+          </script>
 
 
 
