--- a/views/index.ejs
+++ b/views/index.ejs
@@ -217,6 +217,13 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
 </div>
 </div>
 </div>
+<div class="fixed-action-btn">
+<a class="btn-floating btn-large red pulse"
+href="/form_query">
+<i class="large material-icons">mode_edit</i>
+</a>
+
+</div>
 
 
 <script src="js/jquery-3.2.1.min.js"></script>
@@ -227,6 +234,11 @@ Delhi - Agra - Ranthambhore - Jaipur - Pushkar - Udaipur - Mount Abu - Jodhpur -
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
 <script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script src="js/custom.js"></script>
+<script>
+$(document).ready(function(){
+ $('.fixed-action-btn').floatingActionButton();
+});
+</script>
 
 
 
