--- a/views/package-tour/andaman.ejs
+++ b/views/package-tour/andaman.ejs
@@ -7,7 +7,7 @@
 <div class="container">
 <div class="jumbotron blue lighten-4">
   <h1 class="cyan-text text-darken-4"><span >
-  <i class="material-icons medium teal-text" id="hell">tram </i></span>Andaman Island TOUR</h1>
+  <i class="material-icons medium teal-text" id="hell">tram </i></span>Andaman Island Tour</h1>
   <p class="teal-text text-darken-4">
 Andaman and Nicobar is group of beautiful islands located in Bay of Bengal and has became amazing holiday destination for tourists of all genres. Shubham Tours and Travels will offer you the best package at Andaman Nicobar Islands. An Organized travel/tour management which includes: receiving personally, hotels, food arrangements, sightseeing, local travel in AC Car etc.
 </p>
@@ -117,7 +117,7 @@ Andaman and Nicobar is group of beautiful islands located in Bay of Bengal and h
 
               </div>
 							<div class="col l8">
-								<h2 class="center teal-text">Andaman Tour (03 NIGHTS / 04 DAYS )</h2>
+								<h2 class="center teal-text">Andaman Tour (03 nights / 04 days )</h2>
 								<div class="item_text"> <h4>     <button class="btn btn-floating btn-large waves-effect waves-light purple">DAY 1</button>
                 <strong>Arrive Port Blair</strong></h4><p>
                 Arrival at Port Blair in the morning by flight/ship & transfer to hotel. After lunch, visit the Corbyn's Cove Beach - 9 kms from Port Blair - a coconut palm fringed beach, ideal for swimming, sun-basking & bathing. After that visit famous Cellular Jail - National Memorial, Anthropological Museum, Fisheries (Marine) Museum, Naval Marine Museum (Samudrika), and the Cottage Industries Emporium (Sagarika) - for shopping & souvenirs. In the evening, attend the enthralling Sound and Light Show at Cellular Jail - where the heroic saga of the Indian freedom struggle is brought alive.
