--- a/views/package-tour/kashmir.ejs
+++ b/views/package-tour/kashmir.ejs
@@ -7,7 +7,7 @@
 <div class="container">
 <div class="jumbotron blue lighten-4">
   <h1 class="cyan-text text-darken-4"><span >
-  <i class="material-icons medium teal-text" id="hell">tram </i></span>Kashmir  TOUR</h1>
+  <i class="material-icons medium teal-text" id="hell">tram </i></span>KASHMIR  TOUR</h1>
   <p class="teal-text text-darken-4">
 Kashmir, one of the most beautiful tourist destination in India, is the real paradise on earth. Travel to Kashmir to cherish the impeccable natural beauty.
 We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
@@ -75,7 +75,7 @@ We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
 
               </div>
 							<div class="col l8">
-								<h2 class="center teal-text">kashmir TOUR (03 NIGHTS / 04 DAYS )</h2>
+								<h2 class="center teal-text">KASHMIR TOUR (03 NIGHTS / 04 DAYS )</h2>
 								<div class="item_text"> <h4>     <button class="btn btn-floating btn-large waves-effect waves-light purple">DAY 1</button>
                 <strong>ARRIVE SRINAGAR</strong></h4><p>
                 You will be met by our representative at the Srinagar airport. He will assist and transfer you to the hotel/deluxe houseboat. In the afternoon you take a shikara ride on Dal Lake, where you visit the floating vegetable gardens. While riding the Shikara’s there are plenty of opportunities for bird watching with plentiful species including Kingfisher, Little Bittern, Common Pariah Kites, Grebe etc. Dinner and Overnight in hotel / deluxe houseboats
