--- a/views/package-tour/ladakh.ejs
+++ b/views/package-tour/ladakh.ejs
@@ -9,8 +9,9 @@
   <h1 class="cyan-text text-darken-4"><span >
   <i class="material-icons medium teal-text" id="hell">tram </i></span>LADAKH TOUR</h1>
   <p class="teal-text text-darken-4">
-Kashmir, one of the most beautiful tourist destination in India, is the real paradise on earth. Travel to Kashmir to cherish the impeccable natural beauty.
-We provide SRINAGAR,PAHALGAM,GULMARG,SRINAGAR
+    Ladakh ("land of high passes") is a region in the Indian state of Jammu and Kashmir that currently extends from the Kunlun mountain range[3] to the main Great Himalayas to the south, inhabited by people of Indo-Aryan and Tibetan descent. It is one of the most sparsely populated regions in Jammu and Kashmir and its culture and history are closely related to that of Tibet. Ladakh is renowned for its remote mountain beauty and culture.
+
+
 </p>
   <hr class="my-4">
   <button class="btn ">Check out our tours...</button>
