--- a/views/package-tour/rajasthan.ejs
+++ b/views/package-tour/rajasthan.ejs
@@ -3,8 +3,7 @@
 <div class="jumbotron lime lighten-2">
   <h1 class="cyan-text text-darken-4"><span >
   <i class="material-icons medium teal-text" id="hell">tram </i></span>Rajasthan Grand Tour</h1>
-  <p class="teal-text text-darken-4">Shimla, an abode to the captivating natural phenomena and amazing vistas, welcomes the tourists from various parts of the world. With our 2 nights and 3 days Shimla holidays package, you are offered a wonderful opportunity to explore the alluring natural panoramic view of Shimla. Surround yourself with the stunning views, tranquil ambience, bustling markets and popular tourist attractions. Right from walking on the ridge, to relishing coffee at Indian Coffee House; from a visiting the sacred Jakhoo Temple, to enjoying horse riding in the apple orchards, a complete trip of Shimla is provided in this package.
-  ITINERARY</p>
+  <p class="teal-text text-darken-4">Rajasthan ( literally, "Land of Kings") is India's largest state by area (342,239 square kilometres (132,139 sq mi) or 10.4% of India's total area). It is located on the northwestern side of India, where it comprises most of the wide and inhospitable Thar Desert (also known as the "Rajasthan Desert" and "Great Indian Desert") and shares a border with the Pakistani provinces of Punjab to the northwest and Sindh to the west, along the Sutlej-Indus river valley. Elsewhere it is bordered by five other Indian states: Punjab to the north; Haryana and Uttar Pradesh to the northeast; Madhya Pradesh to the southeast; and Gujarat to the southwest.</p>
   <hr class="my-4">
   <button class="btn ">Check out our tours...</button>
 
@@ -153,5 +152,5 @@ Morning drive to Delhi and transfer to airport for onward journey.
 							</div>
 						</div>
           </div>
-          
+
           <% include ../partials/footer %>
