--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+
+
+
+
 .linear{
 
   background: #ed213a; /* fallback for old browsers */
@@ -13,7 +17,32 @@ body{
   background-size: cover;
   margin-top: -4rem;
 }
-.owl-item img{
+
+/* @media screen and (max-width: 460px)
+{
+  .owl-item .special_item_background img{
+    width:25rem;
+    height:90rem;
+    image-resolution: snap;
+    outline-color: invert;
+    object-fit: cover;
+
+  }
+  .last{
+    margin-top: -1000px;
+  }
+} */
+/* @media  screen and (max-width: 380px){
+  #second img{
+
+    height:10%;
+    width:1%;
+  }
+} */
+
+
+
+.owl-item .special_item_background img{
   width:25rem;
   height:40rem;
   image-resolution: snap;
