--- a/public/css/main_styles.css
+++ b/public/css/main_styles.css
@@ -508,9 +508,9 @@ section
 11. Special Offers
 *********************************/
 
-.special
+ .special
 {
-	/* margin-top:-2.5rem; */
+	margin-top:-2.5rem;
 	padding-bottom:0.375rem;
 	background: #FFFFFF ;
 }
@@ -553,7 +553,7 @@ section
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 30%;
 	background: rgba(254, 67, 91, 0);
 	content: '';
 	z-index: 0;
@@ -605,4 +605,4 @@ section
 .special_slider_nav:hover
 {
 	opacity: 0.8;
-}
+} 
