--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,26 +2,35 @@
 <footer class="page-footer black">
          <div class="container">
            <div class="row">
-             <div class="col l6 s12">
+             <div class="col l3">
                <h5 class="white-text"> CONTACT US</h5>
                <p class="grey-text text-lighten-4">Corporate Office:
                JE 35 A , Gupta colony ,KHRIKI EXTENSION ,
                Malviya nagar
                New delhi 110017</p>
              </div>
-             <div class="col l4 offset-l2 s12">
-               <h5 class="white-text">   Email us  :-</h5>
+             <div class="col l3">
+               <h5 class="white-text">   Phone number :-</h5>
                <ul>
-                 <li><a class="grey-text text-lighten-3" href="#!">
-                    customercare@tripstring.com</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">connect@tripstring.com</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!"> sales@tripstring.com</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">   travel@tripstring.com</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">   mice@tripstring.com</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">  bhanupahwa@tripstring.com</a></li>
+                 <li><a class="grey-text text-lighten-3" href="#!">9999454908</a></li>
+                 <li><a class="grey-text text-lighten-3" href="#!">9999807895</a></li>
+                 <li><a class="grey-text text-lighten-3" href="#!">9999807938</a></li>
+                 <li><a class="grey-text text-lighten-3" href="#!">8319058375</a></li>
+
                </ul>
              </div>
-               <div class="col l4 offset-l2 s12">
+             <div class="col l3">
+               <h5 class="white-text">   Email us  :-</h5>
+               <ul>
+                 <li><a class="grey-text text-lighten-3" href="#!">customercare@tripstring.com</a></li>
+                 <li><a class="grey-text text-lighten-3" href="#!">connect@tripstring.com</a></li>
+                 <li><a class="grey-text text-lighten-3" href="#!">sales@tripstring.com</a></li>
+                 <li><a class="grey-text text-lighten-3" href="#!">travel@tripstring.com</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">mice@tripstring.com</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">bhanupahwa@tripstring.com</a></li>
+               </ul>
+             </div>
+               <div class="col l3">
                  <h5 class="white-text"> Connect with us on </h5>
 
                    <i class="fab fa-facebook medium"></i>
