--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
 
           </title>
 
+
           <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
           <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
           <link rel="stylesheet" href="/css/bootstrap.css">
@@ -45,11 +46,7 @@
           <li>
             <a href="/wedding">DestinationWeddings</a>
           </li>
-          <li>
-            <a href="#">
-              <i class="material-icons">person</i>
-            </a>
-          </li>
+
         </ul>
         <ul class="side-nav" id="mobile-nav">
           <li>
@@ -70,11 +67,7 @@
           <li>
             <a href="#">DestinationWeddings</a>
           </li>
-          <li>
-            <a href="#">
-              <i class="material-icons">person</i>
-            </a>
-          </li>
+
         </ul>
       </div>
     </div>
@@ -92,6 +85,8 @@
   <script src="js1/navbar-fixed.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 
 
 
