--- a/views/index.ejs
+++ b/views/index.ejs
@@ -278,6 +278,22 @@ href="/form_query">
 </a>
 
 </div>
+<div class="fixed-action-btn" style="right:50px;top:35px;">
+<a class="btn tooltipped pulse btn-floating btn-large teal " data-text-color="black" data-position="left" data-tooltip="9999454908"
+href="" >
+
+
+<i class="large material-icons">phone</i>
+</a>
+
+</div>
+<div class="fixed-action-btn" style="right:50px;top:155px;">
+<a class="btn tooltipped btn-floating right top btn-large purple pulse"  data-position="left" data-tooltip="9999807895"
+href="">
+<i class="large material-icons">message</i>
+</a>
+
+</div>
 
 
 <script src="js/jquery-3.2.1.min.js"></script>
