--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,13 +38,16 @@
             <a href="#foot">Contact</a>
           </li>
           <li>
-            <a href="/tripstring#special1">TravelPackages</a>
+            <a href="/tripstring#special1">TravPackages</a>
           </li>
           <li>
             <a href="/form_mice">Mice</a>
           </li>
           <li>
-            <a href="/wedding">DestinationWeddings</a>
+            <a href="/wedding">DestWeddings</a>
+          </li>
+          <li>
+            <a href="/weekend">WeekendTours</a>
           </li>
 
         </ul>
