--- a/views/queryform.ejs
+++ b/views/queryform.ejs
@@ -8,7 +8,7 @@
 
  <!------Form Box------>
   <div class="container">
-     <form action="" class="form">
+     <form  class="form" method="post" action="/form_query">
       <input type="text" name="fullname" placeholder="Full Name">
         <textarea name="message" id="" cols="30" rows="5" placeholder="Query"></textarea>
       <input type="text" name="phone" placeholder="Phone Number">
